--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@types/webpack": "3.0.0",
     "@types/webpack-env": "^1.13.5",
     "autoprefixer": "^6.3.6",
+    "autoprefixer-loader": "^3.2.0",
     "awesome-typescript-loader": "3.1.2",
     "babel-core": "^6.24.0",
     "babel-loader": "6.4.1",
@@ -33,6 +34,8 @@
     "clean-webpack-plugin": "^0.1.19",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.10",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "file-loader": "^1.1.11",
     "html-webpack-plugin": "^3.0.6",
     "less": "^2.6.0",
     "less-loader": "^4.1.0",
@@ -40,7 +43,9 @@
     "style-loader": "^0.20.3",
     "ts-loader": "3.0.4",
     "typescript": "2.3.0",
+    "typings-for-css-modules-loader": "1.5.0",
     "uglifyjs-webpack-plugin": "^1.2.3",
+    "url-loader": "^1.0.1",
     "webpack": "3.10.0",
     "webpack-dev-server": "2.11.0"
   }
